--- a/sass/blocks/_main.scss
+++ b/sass/blocks/_main.scss
@@ -145,10 +145,13 @@
     background: $black;
 }
 
+
 .choise {
     position: relative;
-    background-image: url("../img/modern.png");
-    transition: background-image 0.5s linear;
+    background-image: url("../img/loft.png");
+    transition: all 1s ease-in-out;
+    background-size: cover;
+    background-repeat: no-repeat;
     &-wrapper {
         display: flex;
         align-items: center;
@@ -816,15 +819,15 @@
 .swiper-button-prev {
     color: $black;
     position: absolute;
-    top: 106%;
+    top: 116.5%;
 }
 
 .swiper-button-next {
-    left: 57%;
+    left: 61%;
 }
 
 .swiper-button-prev {
-    left: 42%;
+    left: 37.5%;
 }
 
 .swiper-button-next::after,
@@ -835,7 +838,7 @@
 .swiper-horizontal > .swiper-pagination-bullets,
 .swiper-pagination-bullets.swiper-pagination-horizontal,
 .swiper-pagination-custom {
-    top: 105%;
+    top: 115%;
 }
 
 .swiper-pagination-bullet {
@@ -1039,7 +1042,7 @@
 }
 
 .article {
-    &-img{
+    &-img {
         width: 100%;
     }
     &__title {
@@ -1600,4 +1603,22 @@
 
 .services .section-services {
     height: 100vh;
+}
+
+@keyframes imagesFading {
+    0% {
+        opacity: 1;
+    }
+    17% {
+        opacity: 1;
+    }
+    25% {
+        opacity: 0;
+    }
+    92% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
